--- a/ui/index.html
+++ b/ui/index.html
@@ -14,9 +14,10 @@
 	<div id="app">
 
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/babel-core/5.6.15/browser-polyfill.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.js"></script>
 	<script src="/ui/assets/js/app.js"></script>
 </body>
 </html>
