--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react-with-addons.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/react-router/0.13.3/ReactRouter.js"></script>
+	<!--<script src="//cdn.jsdelivr.net/hls.js/latest/hls.min.js"></script>-->
 	<script src="/ui/assets/js/app.js"></script>
 </body>
 </html>
